@@ -1,3 +1,8 @@
+/*
+ * Copyright 2024 European Union. All rights reserved.
+ * European Union EUPL version 1.1.
+ */
+
 package eu.domibus.connector.persistence.service.impl;
 
 import com.fasterxml.jackson.core.JsonParser;
@@ -14,6 +19,11 @@ import eu.domibus.connector.persistence.dao.DomibusConnectorTransportStepDao;
 import eu.domibus.connector.persistence.model.PDomibusConnectorTransportStep;
 import eu.domibus.connector.persistence.model.PDomibusConnectorTransportStepStatusUpdate;
 import eu.domibus.connector.persistence.service.TransportStepPersistenceService;
+import java.io.IOException;
+import java.util.List;
+import java.util.Optional;
+import java.util.Set;
+import java.util.stream.Collectors;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
@@ -22,48 +32,54 @@ import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.io.IOException;
-import java.util.List;
-import java.util.Optional;
-import java.util.Set;
-import java.util.stream.Collectors;
-
+/**
+ * Implementation of the TransportStepPersistenceService interface. Provides methods for creating,
+ * updating, and retrieving Transport Steps.
+ */
 @Service
 @Transactional
 public class TransportStepPersistenceServiceImpl implements TransportStepPersistenceService {
-
-    private static final Logger LOGGER = LogManager.getLogger(TransportStepPersistenceServiceImpl.class);
-
+    private static final Logger LOGGER =
+        LogManager.getLogger(TransportStepPersistenceServiceImpl.class);
     private final DomibusConnectorTransportStepDao transportStepDao;
     private final ObjectMapper objectMapper;
 
-    public TransportStepPersistenceServiceImpl(DomibusConnectorTransportStepDao transportStepDao,
-                                               @DomainModelJsonObjectMapper ObjectMapper objectMapper) {
+    public TransportStepPersistenceServiceImpl(
+        DomibusConnectorTransportStepDao transportStepDao,
+        @DomainModelJsonObjectMapper ObjectMapper objectMapper) {
         this.transportStepDao = transportStepDao;
         this.objectMapper = objectMapper;
     }
 
-
     @Override
-    public DomibusConnectorTransportStep createNewTransportStep(DomibusConnectorTransportStep transportStep) {
-        if (transportStep.getLinkPartnerName() == null || StringUtils.isEmpty(transportStep.getLinkPartnerName().toString())) {
+    public DomibusConnectorTransportStep createNewTransportStep(
+        DomibusConnectorTransportStep transportStep) {
+        if (transportStep.getLinkPartnerName() == null || StringUtils.isEmpty(
+            transportStep.getLinkPartnerName().toString())) {
             throw new IllegalArgumentException("LinkPartner name must be set!");
         }
-        if (transportStep.getTransportedMessage().map(msg -> msg.getConnectorMessageId() == null).orElse(true)) {
-            throw new IllegalArgumentException("TransportedMessage and ConnectorMessageId of message must be set!");
+        if (transportStep.getTransportedMessage().map(msg -> msg.getConnectorMessageId() == null)
+                         .orElse(true)) {
+            throw new IllegalArgumentException(
+                "TransportedMessage and ConnectorMessageId of message must be set!");
         }
         if (transportStep.getConnectorMessageId() == null) {
-            throw new IllegalArgumentException("The connectorMessageId on DomibusConnectorTransportStep is not allowed to be null!");
+            throw new IllegalArgumentException(
+                "The connectorMessageId on DomibusConnectorTransportStep is not allowed to be null!"
+            );
         }
 
-        java.lang.String msgId = transportStep.getTransportedMessage().get().getConnectorMessageId().toString();
-        DomibusConnectorLinkPartner.LinkPartnerName linkPartnerName = transportStep.getLinkPartnerName();
+        var msgId =
+            transportStep.getTransportedMessage().get().getConnectorMessageId().toString();
+        var linkPartnerName = transportStep.getLinkPartnerName();
 
-        Optional<Integer> nAttempt = transportStepDao.getHighestAttemptBy(msgId, linkPartnerName);
-        int nextAttempt = nAttempt.orElse(0) + 1;
+        Optional<Integer> highestAttemptBy =
+            transportStepDao.getHighestAttemptBy(msgId, linkPartnerName);
+        int nextAttempt = highestAttemptBy.orElse(0) + 1;
         transportStep.setAttempt(nextAttempt);
 
-        transportStep.setTransportId(new TransportStateService.TransportId(msgId + "_" + linkPartnerName + "_" + nextAttempt));
+        transportStep.setTransportId(new TransportStateService.TransportId(
+            msgId + "_" + linkPartnerName + "_" + nextAttempt));
 
         PDomibusConnectorTransportStep dbStep = mapTransportStepToDb(transportStep);
         PDomibusConnectorTransportStep savedDbStep = transportStepDao.save(dbStep);
@@ -72,12 +88,15 @@ public class TransportStepPersistenceServiceImpl implements TransportStepPersist
     }
 
     @Override
-    public DomibusConnectorTransportStep getTransportStepByTransportId(TransportStateService.TransportId transportId) {
-        Optional<PDomibusConnectorTransportStep> foundTransport = transportStepDao.findByTransportId(transportId);
+    public DomibusConnectorTransportStep getTransportStepByTransportId(
+        TransportStateService.TransportId transportId) {
+        Optional<PDomibusConnectorTransportStep> foundTransport =
+            transportStepDao.findByTransportId(transportId);
         if (foundTransport.isPresent()) {
             return mapTransportStepToDomain(foundTransport.get());
         } else {
-            throw new RuntimeException(java.lang.String.format("No Transport found with transport id [%s]", transportId));
+            throw new RuntimeException(
+                java.lang.String.format("No Transport found with transport id [%s]", transportId));
         }
     }
 
@@ -90,77 +109,97 @@ public class TransportStepPersistenceServiceImpl implements TransportStepPersist
     }
 
     @Override
-    public List<DomibusConnectorTransportStep> findPendingStepBy(DomibusConnectorLinkPartner.LinkPartnerName linkPartnerName) {
+    public List<DomibusConnectorTransportStep> findPendingStepBy(
+        DomibusConnectorLinkPartner.LinkPartnerName linkPartnerName) {
 
-        String[] states = new String[]{TransportState.PENDING.getDbName()};
-        DomibusConnectorLinkPartner.LinkPartnerName[] linkNames = new DomibusConnectorLinkPartner.LinkPartnerName[]{linkPartnerName};
-        Pageable p = Pageable.unpaged();
-        return transportStepDao.findLastAttemptStepByLastStateAndLinkPartnerIsOneOf(states, linkNames, p).stream()
-                .map(this::mapTransportStepToDomain)
-                .collect(Collectors.toList());
+        var states = new String[] {TransportState.PENDING.getDbName()};
+        var linkNames = new DomibusConnectorLinkPartner.LinkPartnerName[] {linkPartnerName};
+        var p = Pageable.unpaged();
+        return transportStepDao.findLastAttemptStepByLastStateAndLinkPartnerIsOneOf(
+                                   states, linkNames, p).stream()
+                               .map(this::mapTransportStepToDomain)
+                               .toList();
     }
 
     @Override
-    public Optional<DomibusConnectorTransportStep> findStepById(TransportStateService.TransportId transportId) {
-        Optional<PDomibusConnectorTransportStep> byTransportId = transportStepDao.findByTransportId(transportId);
+    public Optional<DomibusConnectorTransportStep> findStepById(
+        TransportStateService.TransportId transportId) {
+        Optional<PDomibusConnectorTransportStep> byTransportId =
+            transportStepDao.findByTransportId(transportId);
         return byTransportId.map(this::mapTransportStepToDomain);
     }
 
     @Override
     public Page<DomibusConnectorTransportStep> findLastAttemptStepByLastStateIsOneOf(
-            Set<TransportState> states,
-            Set<DomibusConnectorLinkPartner.LinkPartnerName> linkPartnerNames,
-            Pageable pageable) {
+        Set<TransportState> states,
+        Set<DomibusConnectorLinkPartner.LinkPartnerName> linkPartnerNames,
+        Pageable pageable) {
 
-        String[] stateStrings = states.stream().map(TransportState::getDbName).toArray(String[]::new);
+        String[] stateStrings =
+            states.stream().map(TransportState::getDbName).toArray(String[]::new);
 
         DomibusConnectorLinkPartner.LinkPartnerName[] linkPartnerArray;
 
-        if (linkPartnerNames.size() == 0) {
-            linkPartnerArray = transportStepDao.findAllLinkPartnerNames().stream().toArray(DomibusConnectorLinkPartner.LinkPartnerName[]::new);
+        if (linkPartnerNames.isEmpty()) {
+            linkPartnerArray = transportStepDao.findAllLinkPartnerNames().toArray(
+                DomibusConnectorLinkPartner.LinkPartnerName[]::new);
         } else {
-            linkPartnerArray = linkPartnerNames.stream().toArray(DomibusConnectorLinkPartner.LinkPartnerName[]::new);
+            linkPartnerArray =
+                linkPartnerNames.toArray(DomibusConnectorLinkPartner.LinkPartnerName[]::new);
         }
 
-        // The query needs non-empty parameters to work. Null or () won't work, but ("") or (null) do.
-        Page<PDomibusConnectorTransportStep> stepByLastState = transportStepDao.findLastAttemptStepByLastStateAndLinkPartnerIsOneOf(stateStrings, linkPartnerArray, pageable);
+        // The query needs non-empty parameters to work. Null or () won't work, but ("") or
+        // (null) do.
+        Page<PDomibusConnectorTransportStep> stepByLastState =
+            transportStepDao.findLastAttemptStepByLastStateAndLinkPartnerIsOneOf(
+                stateStrings,
+                linkPartnerArray,
+                pageable
+            );
         return stepByLastState.map(this::mapTransportStepToDomain);
     }
 
-
     @Override
-    public List<DomibusConnectorTransportStep> findStepByConnectorMessageId(DomibusConnectorMessageId messageId) {
+    public List<DomibusConnectorTransportStep> findStepByConnectorMessageId(
+        DomibusConnectorMessageId messageId) {
         return transportStepDao.findByConnectorMessageId(messageId.getConnectorMessageId())
-                .stream()
-                .map(this::mapTransportStepToDomain)
-                .collect(Collectors.toList());
+                               .stream()
+                               .map(this::mapTransportStepToDomain)
+                               .toList();
     }
 
     @Override
     public List<DomibusConnectorLinkPartner.LinkPartnerName> findAllLinkPartners() {
-        List<DomibusConnectorLinkPartner.LinkPartnerName> allLinkPartnerNames = transportStepDao.findAllLinkPartnerNames();
-        return allLinkPartnerNames; //.stream().map(DomibusConnectorLinkPartner.LinkPartnerName::new).collect(Collectors.toList());
+        return transportStepDao.findAllLinkPartnerNames();
     }
 
-    DomibusConnectorTransportStep mapTransportStepToDomain(PDomibusConnectorTransportStep dbTransportStep) {
+    DomibusConnectorTransportStep mapTransportStepToDomain(
+        PDomibusConnectorTransportStep dbTransportStep) {
 
-        DomibusConnectorTransportStep step = new DomibusConnectorTransportStep();
+        var step = new DomibusConnectorTransportStep();
 
         /*
             read message from db as json
-            the message can be null if the format is not compatible to current connector version (old data)
+            the message can be null if the format is not compatible to current connector version
+            (old data)
          */
         if (dbTransportStep.getTransportedMessage() != null) {
-            try (JsonParser parser = objectMapper.createParser(dbTransportStep.getTransportedMessage())) {
-                DomibusConnectorMessage domibusConnectorMessage = parser.readValueAs(DomibusConnectorMessage.class);
+            try (JsonParser parser = objectMapper.createParser(
+                dbTransportStep.getTransportedMessage())) {
+                DomibusConnectorMessage domibusConnectorMessage =
+                    parser.readValueAs(DomibusConnectorMessage.class);
                 if (domibusConnectorMessage.getConnectorMessageId() != null) {
                     step.setTransportedMessage(domibusConnectorMessage);
                 }
             } catch (IOException e) {
-                LOGGER.warn("Exception occured while reading domibus connector message from transport step table. Maybe the message is a older format.", e);
+                LOGGER.warn(
+                    "Exception occured while reading domibus connector message from "
+                        + "transport step table. Maybe the message is a older format.",
+                    e
+                );
             }
         } else {
-            LOGGER.warn("The transported message was null for step ", dbTransportStep);
+            LOGGER.warn("The transported message was null for step {}", dbTransportStep);
         }
 
         step.setLinkPartnerName(dbTransportStep.getLinkPartnerName());
@@ -170,42 +209,48 @@ public class TransportStepPersistenceServiceImpl implements TransportStepPersist
         step.setRemoteMessageId(dbTransportStep.getRemoteMessageId());
         step.setFinalStateReached(dbTransportStep.getFinalStateReached());
         step.setTransportSystemMessageId(dbTransportStep.getTransportSystemMessageId());
-        step.setConnectorMessageId(new DomibusConnectorMessageId(dbTransportStep.getConnectorMessageId()));
+        step.setConnectorMessageId(
+            new DomibusConnectorMessageId(dbTransportStep.getConnectorMessageId()));
 
-        List<DomibusConnectorTransportStep.DomibusConnectorTransportStepStatusUpdate> statusUpdates = dbTransportStep
-                .getStatusUpdates()
-                .stream()
-                .map(this::mapTransportStepState)
-                .collect(Collectors.toList());
+        List<DomibusConnectorTransportStep.DomibusConnectorTransportStepStatusUpdate>
+            statusUpdates = dbTransportStep
+            .getStatusUpdates()
+            .stream()
+            .map(this::mapTransportStepState)
+            .toList();
 
         step.setStatusUpdates(statusUpdates);
-
 
         return step;
     }
 
-    private DomibusConnectorTransportStep.DomibusConnectorTransportStepStatusUpdate mapTransportStepState(PDomibusConnectorTransportStepStatusUpdate dbTransportUpdate) {
-        DomibusConnectorTransportStep.DomibusConnectorTransportStepStatusUpdate update =
-                new DomibusConnectorTransportStep.DomibusConnectorTransportStepStatusUpdate();
+    private DomibusConnectorTransportStep.DomibusConnectorTransportStepStatusUpdate
+    mapTransportStepState(
+        PDomibusConnectorTransportStepStatusUpdate dbTransportUpdate) {
+        var update = new DomibusConnectorTransportStep.DomibusConnectorTransportStepStatusUpdate();
         update.setCreated(dbTransportUpdate.getCreated());
         update.setText(dbTransportUpdate.getText());
         update.setTransportState(dbTransportUpdate.getTransportState());
         return update;
     }
 
-    private PDomibusConnectorTransportStep mapTransportStepToDb(DomibusConnectorTransportStep transportStep) {
+    private PDomibusConnectorTransportStep mapTransportStepToDb(
+        DomibusConnectorTransportStep transportStep) {
         if (transportStep.getConnectorMessageId() == null) {
-            throw new IllegalArgumentException("The provided connector message id is not allowed to be null!");
+            throw new IllegalArgumentException(
+                "The provided connector message id is not allowed to be null!");
         }
 
+        var connectorMessageId = transportStep.getConnectorMessageId().toString();
+        var partnerName = transportStep.getLinkPartnerName();
 
-        java.lang.String msgId = transportStep.getConnectorMessageId().toString();
-        DomibusConnectorLinkPartner.LinkPartnerName partnerName = transportStep.getLinkPartnerName();
-
-        Optional<PDomibusConnectorTransportStep> foundStep = transportStepDao.findbyMsgLinkPartnerAndAttempt(msgId, partnerName, transportStep.getAttempt());
+        Optional<PDomibusConnectorTransportStep> foundStep =
+            transportStepDao.findbyMsgLinkPartnerAndAttempt(connectorMessageId, partnerName,
+                                                            transportStep.getAttempt()
+            );
         PDomibusConnectorTransportStep dbStep = foundStep.orElseGet(() -> {
-            PDomibusConnectorTransportStep s = new PDomibusConnectorTransportStep();
-            s.setConnectorMessageId(msgId);
+            var s = new PDomibusConnectorTransportStep();
+            s.setConnectorMessageId(connectorMessageId);
             s.setLinkPartnerName(partnerName);
             s.setTransportId(transportStep.getTransportId());
             return s;
@@ -225,27 +270,29 @@ public class TransportStepPersistenceServiceImpl implements TransportStepPersist
         dbStep.setRemoteMessageId(transportStep.getRemoteMessageId());
         dbStep.setTransportSystemMessageId(transportStep.getTransportSystemMessageId());
 
-        Set<TransportState> updates = dbStep.getStatusUpdates()
-                .stream()
-                .map(u -> u.getTransportState())
-                .collect(Collectors.toSet());
+        Set<TransportState> updates = dbStep
+            .getStatusUpdates()
+            .stream()
+            .map(
+                PDomibusConnectorTransportStepStatusUpdate::getTransportState)
+            .collect(Collectors.toSet());
 
-        List<PDomibusConnectorTransportStepStatusUpdate> newStatus = transportStep.getStatusUpdates()
-                .stream()
-                //if db not alredy contains update add it
-                .filter(u -> !updates.contains(u.getTransportState()))
-                .map(u -> {
-                    PDomibusConnectorTransportStepStatusUpdate update = new PDomibusConnectorTransportStepStatusUpdate();
-                    update.setCreated(u.getCreated());
-                    update.setTransportState(u.getTransportState());
-                    update.setText(u.getText());
-                    update.setTransportStep(dbStep);
-                    return update;
-                }).collect(Collectors.toList());
+        List<PDomibusConnectorTransportStepStatusUpdate> newStatus =
+            transportStep.getStatusUpdates()
+                         .stream()
+                         // if db not already contains update add it
+                         .filter(u -> !updates.contains(u.getTransportState()))
+                         .map(u -> {
+                             var update = new PDomibusConnectorTransportStepStatusUpdate();
+                             update.setCreated(u.getCreated());
+                             update.setTransportState(u.getTransportState());
+                             update.setText(u.getText());
+                             update.setTransportStep(dbStep);
+                             return update;
+                         }).toList();
 
         dbStep.getStatusUpdates().addAll(newStatus);
 
         return dbStep;
     }
-
 }
